# cyrt-safe-to-land

./: .dockerignore  .gitignore  00 connections.ipynb  01 ingestion.ipynb  Dockerfile  README.md  Untitled Notebook 2025-08-12 08:52:27.ipynb  hello_world.ipynb  model.py  model_prototype.ipynb  pyproject.toml  realtime_forecast.grib2.5b7b6.idx  requirements.txt  response_variable_historical.csv  view_queue.py
deploy/: Dockerfile  inference.py  requirements.txt
functions/timer_trigger_forecast_api/: function_app.py  local.settings.json  requirements.txt
